--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@ html,
 body {
   height: 100%;
   width: 100%;
+  scrollbar-width: none;
+  -ms-overflow-style: none; 
+
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .paje1 {
