--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  position: relative;
 }
 
 .paje1 {
@@ -42,6 +43,8 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 100;
 }
 
 .nav-part2 {
@@ -109,6 +112,7 @@ nav {
 .right h1 {
   font-size: 10.5vw;
   line-height: 8.5vw;
+
   text-align: right;
 }
 .right {
@@ -281,8 +285,8 @@ video {
 }
 
 .back-circle {
-  height: 32vw;
-  width: 32vw;
+  height: 40vw;
+  width: 40vw;
   position: absolute;
   background: linear-gradient(to top, #fe320a, #ff671b);
   border-radius: 50%;
@@ -313,11 +317,11 @@ video {
   min-height: 100vh;
   width: 100%;
   background-color: #efeae3;
-  padding: 4vw 0;
+  padding: 4vw 0 0 0;
 }
 
 .elem {
-  height: 130px;
+  min-height: 130px;
   width: 100%;
   position: relative;
   display: flex;
@@ -358,10 +362,11 @@ video {
 }
 
 .paje4 {
-  height: 70vh;
+  min-height: 70vh;
   width: 100%;
-  /* background-color: #efeae3; */
-  background-color: yellow;
+  background-color: #efeae3;
+  /* background-color: yellow; */
+  padding: 2vw 2vw;
 }
 
 .main {
@@ -369,7 +374,7 @@ video {
 }
 
 .paje5 {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   position: relative;
   z-index: -2;
@@ -432,13 +437,12 @@ video {
 }
 
 /************************   top div ****************/
-
 .footer {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   position: fixed;
-  background: linear-gradient(to top, black, #fe320a);
-  background-color: #fe320a;
+  /* background: linear-gradient(to top, black, #fe320a); */
+  background-color: black;
   z-index: -1;
   bottom: 0;
   display: flex;
@@ -449,18 +453,18 @@ video {
 
 .footer h1 {
   font-size: 23vw;
-  color: #eee9e2;
+  color: #efeae3;
   line-height: 1;
   margin: 0;
   padding: 0;
 }
 
 .footer-top {
-  height: 20vh;
+  min-height: 20vh;
   width: 100%;
   color: #f2cbc0;
   /* background-color: red; */
-  padding: 0vw 4vw;
+  padding: 5vw 4vw;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -468,15 +472,18 @@ video {
 }
 .footer-bottom {
   border-top: 2px solid #504a45;
-  padding: 1vw 0vw;
-  height: 10vh;
+  padding: 1vw 2vw;
+  min-height: 10vh;
   width: 100%;
   display: flex;
+  grid-column-gap: 5vw;
+  flex-flow: wrap;
   justify-content: space-between;
   align-items: center;
 }
+
 .footer-bottom h4 {
-  color: #eee9e2;
+  color: #efeae3;
   font-weight: 200;
 }
 
@@ -512,29 +519,472 @@ video {
 }
 
 .swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
+  background: #efeae3;
+  border-left: 1px solid #504a45;
+  width: 30%;
+}
+
+.slider-main_wrapper {
+  grid-column-gap: 1.5em;
+  grid-row-gap: 1.5em;
+  border-left: 1px solid rgba(0, 0, 0, 0.2);
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 1.5em;
   display: flex;
-  justify-content: center;
-  align-items: center;
+}
+.slider-main_wrapper p {
+  font-weight: 200;
 }
 
-.swiper-slide img {
-  display: block;
+.mySwiper {
+  cursor: ew-resize;
+}
+
+/*********************** paje 3.5 ********************/
+
+.paje35 {
+  background-color: #efeae3;
+  min-height: 100vh;
+  padding: 4vw 2vw;
+}
+
+/********   kuch ***************/
+
+.full-scr {
+  height: 100vh;
   width: 100%;
+  background-color: rgba(80, 74, 69, 0.6);
+  position: fixed;
+  z-index: 99;
+  top: -100%;
+  transition: all ease 0.6s;
+}
+.full-div1 {
+  height: 50%;
+  width: 100%;
+  background-color: rgba(239, 234, 227, 1);
+  border-bottom-left-radius: 20px;
+  border-top-right-radius: 20px;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 9vw;
+  padding-top: 20vw;
+  padding-right: 6vw;
+}
+.menu-div {
+  display: none;
+}
+
+.dot {
+  border-radius: 50px;
+  background-color: #fe570a;
+  height: 0.5vw;
+  width: 0.5vw;
+}
+.fea-pro {
+  display: flex;
+  align-items: center;
+  padding: 4vw 2vw;
+}
+.fea-pro h2 {
+  font-size: 1vw;
+  font-weight: 200;
+  margin-left: 1vw;
+}
+
+/***************** last *********************/
+
+.bkc {
+  z-index: -2;
+}
+.sundown {
+  z-index: -4;
+}
+
+.bk1 {
+  top: -10%;
+  left: -35%;
+  /* animation-duration: 5s; */
+}
+.bk2 {
+  top: -35%;
+  left: -10%;
+  animation-duration: 3s;
+}
+.bk3 {
+  top: -50%;
+  left: 20%;
+  animation-duration: 4s;
+}
+.bk4 {
+  top: -40%;
+  left: 50%;
+  animation-duration: 6s;
+}
+.bk5 {
+  top: -10%;
+  left: 100%;
+  animation-duration: 3s;
+}
+.bk6 {
+  top: 10%;
+  left: 100%;
+  animation-duration: 5s;
+}
+.bk7 {
+  top: -40%;
+  left: 80%;
+  animation-duration: 8s;
+}
+.bk8 {
+  top: 20%;
+  left: 100%;
+  animation-duration: 4s;
+}
+
+/* .paje4 {
+  display: none;
+} */
+.lnk {
+  cursor: pointer;
+}
+.work {
+  padding: 4vw 0;
+}
+
+/*********************** mobile version videos ************/
+.images {
+  display: none;
+}
+.videos {
+  display: none;
+}
+
+/******* responsive nes ************/
+@media (max-width: 600px) {
+  .paje1 {
+    min-height: 100vh;
+    width: 100%;
+    padding: 0 0vw;
+  }
+  .menu {
+    display: block;
+  }
+  nav {
+    padding: 8vw 6vw;
+    background-color: #efeae3;
+  }
+  nav img {
+    transition: all ease 0.2s;
+    height: 9vh;
+  }
+  .nav-part2 {
+    display: none;
+  }
+  /* nav h3 {
+    display: block;
+    padding: 3vw 5vw;
+    border: 1px solid #504a45;
+    border-radius: 50px;
+    font-size: 4vw;
+    font-weight: 200;
+    padding-left: 10vw;
+  } */
+  .menu-div {
+    display: flex;
+    border: 1px solid #504a45;
+    border-radius: 30px;
+    padding: 2vw 4vw;
+  }
+  i {
+    font-size: 4.9vw;
+  }
+  .menu {
+    font-weight: 200;
+    padding-left: 2vw;
+  }
+  .center {
+    height: 62vh;
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    border-bottom: 1px solid #504a45;
+    flex-direction: column-reverse;
+    padding: 7vw 5vw;
+    padding-bottom: 10vw;
+    position: relative;
+    z-index: 9;
+  }
+  .left h3 {
+    width: 85%;
+    font-size: 5.8vw;
+    line-height: 7vw;
+  }
+  .center h1 {
+    font-size: 17vw;
+    text-align: right;
+    line-height: 15vw;
+  }
+  .paje1 video {
+    position: relative;
+    border-radius: 15px;
+    margin: 4vw 1vw;
+    width: 97%;
+    height: 70vh;
+    object-fit: cover;
+    object-position: center;
+  }
+  .hero-shape {
+    position: absolute;
+    width: 80vw;
+    height: 76vw;
+    right: 0;
+    top: 65vh;
+  }
+  .gola {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: #fe330a;
+    margin: 2vw 2vw;
+  }
+  .moving-text h1 {
+    font-size: 15vw;
+  }
+  .paje2-bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15vw 4vw;
+  }
+  .paje2-bottom h1 {
+    font-size: 7.1vw;
+    width: 100%;
+    line-height: 8vw;
+  }
+  .paje2-bottom-right {
+    width: 75%;
+  }
+  .paje2-bottom-right p {
+    font-size: 3.5vw;
+    line-height: 5vw;
+  }
+  .paje2-bottom-right img {
+    height: 50vw;
+    max-width: 100%;
+    margin-bottom: 6vw;
+  }
+  .paje2 {
+    min-height: 110vh;
+    overflow: hidden;
+  }
+  .paje3 {
+    min-height: 100vh;
+    width: 100%;
+    background-color: #efeae3;
+    padding: 5vw 0 0 0;
+  }
+  .elem {
+    min-height: 70vh;
+    flex-direction: column;
+    margin: 4vw 0;
+  }
+  .paje4 p {
+    font-size: 3.5vw;
+  }
+  .paje35 {
+    min-height: 50vh;
+  }
+  .footer-bottom h4 {
+    font-weight: 200;
+    font-size: 4vw;
+  }
+  .footer h1 {
+    margin-bottom: 4vw;
+  }
+  .footer-top {
+    height: 60vh;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .footer-top-left h2 {
+    font-size: 8vw;
+  }
+  .footer-top-right {
+    height: 60%;
+    width: 100%;
+  }
+  .footer-top-right p {
+    font-size: 5vw;
+  }
+  .footer-top {
+    align-items: normal;
+    padding: 5vw 1vw;
+  }
+  .w-button {
+    margin-left: 4vw;
+    padding: 0;
+  }
+  .footer-top-left h2 {
+    color: white;
+  }
+  .footer-top-right p {
+    color: white;
+  }
+  .w-input {
+    color: white;
+  }
+  .allproject {
+    margin: 5vw 0vw;
+    display: block;
+    width: 20%;
+  }
+  .allproject h4 {
+    font-size: 3vw;
+    padding: 1vw 2vw;
+  }
+  .paje35 video {
+    position: relative;
+    border-radius: 15px;
+    margin: 4vw 1vw;
+    width: 97%;
+    height: 70vh;
+    object-fit: cover;
+    object-position: center;
+  }
+  .paje2 .back-circle {
+    top: 30%;
+    height: 80vw;
+    width: 80vw;
+  }
+  .dot {
+    height: 2vw;
+    width: 2vw;
+  }
+  .fea-pro {
+    display: flex;
+    align-items: center;
+    padding: 3vw 4vw;
+  }
+  .fea-pro h2 {
+    font-size: 3vw;
+    font-weight: 200;
+    margin-left: 2vw;
+  }
+  .bk1 {
+    top: -30%;
+    left: -15%;
+    height: 130vw;
+    width: 50vw;
+  }
+  .bk2 {
+    top: -30%;
+    left: 10%;
+    height: 120vw;
+    width: 50vw;
+  }
+  .bk3 {
+    top: 5%;
+    left: 80%;
+    height: 110vw;
+    width: 60vw;
+  }
+  .bk4 {
+    top: -15%;
+    left: 40%;
+    height: 130vw;
+    width: 70vw;
+  }
+  .overlay {
+    position: static;
+    height: 60vh;
+    border-radius: 20px;
+    background-color: none;
+  }
+  .elem h2 {
+    font-size: 6vw;
+    margin: 3vw;
+    font-weight: 200;
+  }
+  .elem {
+    border-bottom: none;
+    padding: 0 4vw;
+  }
+  .elem-container {
+    min-height: auto;
+  }
+  .images {
+    display: block;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    border-radius: 20px;
+  }
+  .videos {
+    display: block;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    border-radius: 20px;
+    margin-top: 0;
+  }
+  .elem6 {
+    margin-bottom: auto;
+  }
+  .work {
+    margin-bottom: 12vw;
+    font-size: small;
+    padding: 3vw 1vw;
+  }
+}
+
+/******** loader *******/
+.loader {
   height: 100%;
-  object-fit: cover;
+  width: 100%;
+  background-color: black;
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  transition: all ease 0.7s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.swiper-slide {
-  width: 60%;
+.loader h1 {
+  font-size: 10vw;
+  color: transparent;
+  background: linear-gradient(to right, orange, orangered);
+  -webkit-background-clip: text;
+  position: absolute;
+  opacity: 0;
+  animation: load;
+  animation-duration: 1s;
+  animation-delay: 0.5s;
+  animation-timing-function: linear;
 }
 
-.swiper-slide:nth-child(2n) {
-  width: 40%;
+.loader h1:nth-child(2) {
+  animation-delay: 1.5s;
+}
+.loader h1:nth-child(3) {
+  animation-delay: 2.5s;
 }
 
-.swiper-slide:nth-child(3n) {
-  width: 20%;
+@keyframes load {
+  0% {
+    opacity: 1;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
 }
